<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SensorsTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">SensorDemo</string>
    <string name="orientation">Orientation</string>
    <string name="temperature">Temperature</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="magnetic">Magnetic</string>
    <string name="pressure">Pressure</string>
    <string name="light">Light</string>
    <string name="gravity">Gravity</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="proximity">Proximity</string>
    <string name="rotation_vector">Rotation Vector</string>
    <string name="humidity">Humidity</string>
</resources>
