<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:scrollbars="vertical"
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".MainActivity"
        tools:ignore="MergeRootFrame">


    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tvAcc"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:text="@string/accelerometer"
                android:background="#F00F00"
                android:layout_marginBottom="3sp"
                android:layout_marginTop="3sp"
                android:textColor="#00FF00"
                android:clickable="false"/>


        <TextView
                android:id="@+id/tvGyroscope"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:text="@string/gyroscope"
                android:background="#0022FF"
                android:layout_marginBottom="3sp"
                android:layout_marginTop="3sp"
                android:textColor="#00EE22"
                android:clickable="true"/>

        <TextView
                android:id="@+id/tvOrientation"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:text="@string/orientation"
                android:background="#00C033"
                android:layout_marginBottom="3sp"
                android:layout_marginTop="3sp"
                android:textColor="#55FF00"
                />
        <TextView
                android:id="@+id/tvMagnetic"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:text="@string/magnetic"
                android:background="#0033EE"
                android:layout_marginBottom="3sp"
                android:layout_marginTop="3sp"
                android:textColor="#00FF00"
                />
        <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:text="@string/temperature"
                android:background="#FF0F0C"
                android:layout_marginBottom="3sp"
                android:layout_marginTop="3sp"
                android:textColor="#00FF00"
                />
        <TextView
                android:id="@+id/tvLight"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:text="@string/light"
                android:background="#00FF00"
                android:layout_marginBottom="3sp"
                android:layout_marginTop="3sp"
                android:textColor="#000000"
                />
        <TextView
                android:id="@+id/tvPressure"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:text="@string/pressure"
                android:background="#FF0F0C"
                android:layout_marginBottom="3sp"
                android:layout_marginTop="3sp"
                android:textColor="#00FF00"
                />
        <TextView android:id="@+id/tvGravity"
                  android:layout_width="fill_parent"
                  android:layout_height="60dp"
                  android:text="@string/gravity"
                  android:background="#0FFF0C"
                  android:layout_marginBottom="3sp"
                  android:layout_marginTop="3sp"
                  android:textColor="#FF0000"
                />
        <TextView android:id="@+id/tvProximity"
                  android:layout_width="fill_parent"
                  android:layout_height="60dp"
                  android:text="@string/proximity"
                  android:background="#0000FF"
                  android:layout_marginBottom="3sp"
                  android:layout_marginTop="3sp"
                  android:textColor="#00FF00"
                />
        <TextView
                android:id="@+id/tvRotationVector"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:text="@string/rotation_vector"
                android:background="#FF0F0C"
                android:layout_marginBottom="3sp"
                android:layout_marginTop="3sp"
                android:textColor="#00FF00"
                />
        <TextView android:id="@+id/tvHumidity"
                  android:layout_width="fill_parent"
                  android:layout_height="60dp"
                  android:text="@string/humidity"
                  android:background="#0FFF0C"
                  android:layout_marginBottom="3sp"
                  android:layout_marginTop="3sp"
                  android:textColor="#FF0000"
                />
    </LinearLayout>
</ScrollView>